--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,14 @@
   --color-accent: #ff3400;
   --color-heading: #1b0760;
   --color-body: #918ca4;
+  --color-border: #ccc;
+  --border-radius: 30px;
+}
+
+*,
+::after,
+::before {
+  box-sizing: border-box;
 }
 
 html {
@@ -157,4 +165,105 @@ a {
   display: inline-flex;
   justify-content: center;
   align-items: center;
+}
+
+/* BUTTONS */
+.btn {
+  border-radius: 40px;
+  border: 0;
+  cursor: pointer;
+  font-size: 1.8rem;
+  font-weight: 600;
+  outline: none;
+  padding: 2rem 3rem;
+  text-transform: uppercase;
+  margin: 1rem 0;
+  white-space: nowrap;
+}
+
+.btn--primary {
+  color: white;
+  background-color: var(--color-primary);
+}
+
+.btn--primary:hover {
+  background-color: #3a8ffe;
+}
+
+.btn--secondary {
+  color: white;
+  background-color: var(--color-secondary);
+}
+
+.btn--secondary:hover {
+  background-color: #51e1fa;
+}
+
+.btn--accent {
+  color: white;
+  background-color: var(--color-accent);
+}
+
+.btn--accent:hover {
+  background-color: #f3542c;
+}
+
+.btn--outline {
+  color: var(--color-heading);
+  background-color: transparent;
+  border: 2px solid var(--color-heading);
+}
+
+.btn--outline:hover {
+  background-color: #dbdbdb;
+}
+
+.btn--block {
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+}
+
+@media screen and (min-width: 1024px) {
+  .btn {
+    font-size: 1.5rem;
+  }
+}
+
+/* INPUTS */
+.input {
+  padding: 1.6rem 3.5rem;
+  border: 1px solid var(--color-border);
+  border-radius: var(--border-radius);
+  outline: 0;
+  color: var(--color-heading);
+  font-size: 2rem;
+}
+
+.input::placeholder {
+  color: #cdcbd7;
+}
+
+.input-group {
+  border: 1px solid var(--color-border);
+  border-radius: var(--border-radius);
+  display: flex;
+  /* justify-content: center; */
+  /* align-items: center; */
+}
+
+.input-group .input {
+  border: none;
+  flex-grow: 1;
+  padding: 1.6rem 1rem;
+}
+
+.input-group .btn {
+  margin: 0.4rem;
+}
+
+@media screen and (min-width: 1024px) {
+  .input {
+    font-size: 1.5rem;
+  }
 }
