--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ h4,
 h5 {
   color: var(--color-heading);
   margin-bottom: 1rem;
+  line-height: 1.1;
 }
 
 h1 {
@@ -197,6 +198,13 @@ a {
   text-align: center;
 }
 
+.btn .icon {
+  height: 2rem;
+  width: 2rem;
+  margin-right: 1rem;
+  vertical-align: middle;
+}
+
 .btn--primary {
   color: white;
   background-color: var(--color-primary);
@@ -269,6 +277,8 @@ a {
   border: 1px solid var(--color-border);
   border-radius: var(--border-radius);
   display: flex;
+  background-color: #fff;
+
   /* justify-content: center; */
   /* align-items: center; */
 }
@@ -560,7 +570,7 @@ a {
 /* BLOCKS */
 .block {
   --padding-vertical: 6rem;
-  background-color: #d1d1d1;
+  /* background-color: #e2e2e2; */
   padding: var(--padding-vertical) 2rem;
   /* height: 100vh; */
 }
@@ -592,4 +602,123 @@ a {
 .container {
   max-width: 1140px;
   margin: 0 auto;
+}
+
+/* NAV */
+.nav {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 500;
+  background-color: #000;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 0 1rem;
+  align-items: center;
+}
+
+.nav__list {
+  width: 100%;
+  margin: 0;
+}
+
+.nav__item {
+  padding: 0.5rem 2rem;
+  color: #d2d0db;
+  border-bottom: 1px solid #222;
+}
+.nav__item:last-of-type {
+  border: none;
+}
+
+.nav__item a {
+  color: #d2d0db;
+  transition: color 0.3s;
+}
+
+.nav__item a:hover {
+  color: #fff;
+}
+
+.nav__toggler {
+  opacity: 0.5;
+  transition: opacity 0.2s;
+}
+
+.nav__toggler:hover {
+  opacity: 1;
+}
+
+.nav .collapsible--expanded .nav__toggler {
+  opacity: 1;
+}
+
+@media screen and (min-width: 768px) {
+  .nav__toggler {
+    display: none;
+  }
+
+  .nav__list {
+    display: flex;
+    width: auto;
+    font-size: 1.7rem;
+    max-height: 100%;
+    opacity: 1;
+  }
+
+  .nav__item {
+    border: none;
+  }
+}
+
+.nav__brand {
+  transform: translateY(5px);
+}
+/* HERO */
+.hero__heading {
+  color: #fff;
+}
+
+.hero__tagline {
+  font-size: 2rem;
+  color: #b9c3cf;
+  letter-spacing: 1px;
+  margin: 2rem 0 5rem;
+}
+
+.hero__image {
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    padding-top: 0;
+  }
+  .hero__content {
+    text-align: left;
+    align-self: center;
+  }
+}
+
+.block-domain .input-group {
+  margin: 4rem 0;
+  box-shadow: 0 0 30px 20px #e6ebee;
+  border: 0;
+}
+
+.block-domain__prices {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 6rem);
+  font-size: 2rem;
+  font-weight: 600;
+  justify-items: center;
+  max-width: 670px;
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+  .block-domain__prices {
+    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+  }
 }
